# CppStuffMac

./: .gitignore  CMakeLists.txt  main.cpp  mandelbrot.cpp  plotting.cpp  terminalcolour.cpp  testcomplexnumbers.cpp  testmandelbrot.cpp
source/: complexnumbers.cpp
